# parallel-computing

helper/: helpers.hpp
task1_1/: CMakeLists.txt  task1_1.cpp
task1_2/: .gitignore  CMakeLists.txt  task1_2.cpp
task2/: README.md  run.sbatch  task2.cpp
